songbird/src/styles/components/_game.scss
.game {
  --page-display: grid;

  position: relative;
  display: none; // display: grid;
  padding-top: var(--spacer-400);
  padding-bottom: var(--spacer-400);
  height: 100%;
  grid-template-columns: 1fr;
  grid-auto-rows: auto;
  grid-template-areas:
    "score"
    "categories"
    "player"
    "answers"
    "description"
    "button";
  gap: var(--spacer-500);
  align-items: start;
  overflow: hidden;

  @media (min-width: 700px) {
    grid-template-columns: 1fr 1fr;
    grid-template-areas:
    "score score"
    "categories categories"
    "player player"
    "answers description"
    "button button";
  }
}

.game__video-background {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
}

.game__score {
  grid-area: score;
  justify-self: end;
  color: var(--clr-default)
}

.game__categories {
  background-color: var(--clr-default);
  grid-area: categories;
}

.game__song-question {
  background-color: var(--clr-default);

  grid-area: player;
}

.game__answers {
  background-color: var(--clr-default);

  grid-area: answers;
}

.game__song-description {
  height: 375.2px;
  align-content: start;
  background-color: var(--clr-default);
  overflow-y: scroll;

  grid-area: description;
}

.game__continue-button {
  grid-area: button;
}

